--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,3 +9,9 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 #spring.jpa.hibernate.naming.implicit-strategy=PhysicalNamingStrategy
 #spring.jpa.hibernate.naming-strategy=ImplicitNamingStrategy
+
+#=======================HikariCP \u5149===============================
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.minimum-idle=20
+spring.datasource.hikari.maximum-pool-size=30
+spring.datasource.hikari.idle-timeout=5000
